--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=agencerecrutement
 
 # Base de données MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/agence_recrutement?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Ppvf5608?
+spring.datasource.url=jdbc:mysql://localhost:3306/agence_recrutement?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=platformerecrut
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
